@@ -1,3 +1,8 @@
+05 March 2008
+
+* Print current progress on SIGINFO. Be careful with this, it is possible
+  there are places where an unhandled EINTR would cause fdm to die.
+
 10 February 2008
 
 * Consistently use geteuid().
@@ -793,4 +798,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.185 2008-02-10 06:56:28 nicm Exp $
+$Id: CHANGES,v 1.186 2008-03-06 07:26:25 nicm Exp $
